src/assets/css/site.less
/* ... */
.l-readable {
  max-width: 40em;
}

.l-background {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 0;
}

.u-text-center {
  text-align: center;
}

.c-header {
  font-family: @font-family-headers;
  .l-readable();
  .u-text-center();
  margin: 0 auto;

  &__heading {
    // background: rgba(0, 0, 0, 0.47);
    color: #000;
  }

  .has-vid & {
    display: none;
  }
}

.l-container {
  padding: 0 20px;
  max-width: 1280px;
  margin: 0 auto;
}

.c-vid-grid {
  display: flex;
  flex-flow: row wrap;
  overflow: hidden;
  width: 100%;
  padding: 40px 10vw;
  // max-width: 1024px;
  margin: 0 auto;
  justify-content: space-around;

  .has-vid & {
    display: none;
  }

  &__item {
    width: 100%;

    @media screen and (min-width: 1200px) {
        width: ~"calc(50% - 40px)";
    }

    @media  screen and (min-width: 1600px) {
        width: ~"calc(33% - 40px)";
    }
  }
}

.c-vid {
  display: block;
  font-family: @font-family-headers;
  position: relative;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 0;
  margin-bottom: 40px;
  padding-bottom: 56.25%;
  z-index: 2;
  box-shadow: 0 10px 20px 0 rgba(91, 107, 174, 0.25);
  transition: transform 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53);

  &__image {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  &__details {
    font-family: @font-family-body;
    position: relative;
    padding: 10px 10px 60px;
    color: #fff;
    text-shadow: #000 1px 1px;
    background: linear-gradient(to top, transparent, #000);
  }

  &__title {
    display: flex;
    justify-content: space-between;
    flex-flow: row nowrap;
    padding-bottom: 5px;
    font-size: 22px;
  }

  &__footage,
  &__date {
    font-size: 16px;
  }

  &__date {
    white-space: nowrap;
    align-self: center;
  }

  &,
  &:hover,
  &:focus {
    color: #000;
    text-decoration: none;
  }
  
  &:hover,
  &:focus {
    transform: scale(1.05);
    z-index: 3;
  }
}

.c-vidnav {
  list-style: none;
  margin: 0;

  &__link {
    font-size: 20px;
    padding: 0.5em;
    margin-bottom: 5px;
    background: rgba(255, 255, 255, 0.7);
    display: inline-block;

    &,
    &:hover,
    &:focus {
      color: #000;
      text-decoration: none;
    }

    &:hover,
    &:focus {
      background-color: #fff;
    }
  }
}

.c-details {
  display: none;
  color: #fff;
  padding: 20px;
  width: 90vmin;
  margin: 0 auto 0;

  &.is-active {
    display: block;
  }

  &__header {
    font-family: @font-family-headers;
    font-size: 1em;
  }

  &__footage,
  &__music{
    padding: 5px 0;
  }
  &__description {
    padding: 20px 0 0;
  }

  &__downloads {
      padding-bottom: 30px;
  }

  &__download {
    background-color: @lightest-for-black;
    color: #000;
    margin: 5px;
    padding: 5px;
    border-radius: 6px;
    transition: background-color 0.3s ease;
    font-size: 14px;
    line-height: 1;
    white-space: nowrap;

    &,
    &:hover,
    &:focus {
      text-decoration: none;
    }

    &:hover,
    &:focus {
      background-color: #fff;
    }
  }
}

.u-font-header {
  font-family: @font-family-headers;
}
.c-backnav {
  display: none;
  font-family: @font-family-headers;
  font-weight: 100;
  font-size: 1.2rem;
  line-height: 1;
  background: @darkest-for-white;
  padding: 10px 20px;
  color: #fff;
  text-decoration: none;
  
  &__title {
    text-align: right;
    margin-left: auto;
  }

  &__link {
    color: inherit;
    text-decoration: none;

    &:hover,
    &:focus {
      color: #f0f0f0;
      text-decoration: underline;
    }
  }

  .has-vid & {
    display: flex;
  }
}

.video-js .vjs-big-play-button {
  left: 50% !important;
  top: 50% !important;
  transform: translate(-50%, -50%);
}

.l-details {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  opacity: 0;
  background: @darkest-for-white;
  transition: opacity 3s ease;

  .has-vid & {
    opacity: 1;
    min-height: 100vh;
  }
}

.c-video {
  display: none;
  flex: 1 1 auto;
  width: 90vmin;
  margin: 40px auto;
  opacity: 0;
  transition: opacity 0.5s ease;

  .has-vid & {
    display: block;
  }

  &.is-loaded {
    opacity: 1;
  }

  .plyr {
    box-shadow: 0 0 20px rgba(0,0,0,0.5);
  }

  .plyr--fullscreen-enabled {
    max-width: none;
    margin: 0;
  }

  .plyr__video-wrapper {
    background: none;
    -webkit-mask-image: none;
  }

  .plyr video {
    opacity: 0;
    transition: opacity 0.5s ease;
  }

  .plyr video:focus,
  .plyr:hover video,
  .plyr--playing video {
    opacity: 1;
  }
}

.c-footer {
    padding: 10px;
    background-color: transparent;
    color: #000;

    .has-vid & {
        background-color: @darkest-for-white;
        color: #fff;
        display: none;
    }
}

.c-footer.c-footer--vid.u-relative {
    display: block;
}

@keyframes plyr-progress{
    to{
        background-position:25px 0
    }
}
@keyframes plyr-popup{
    0%{
        opacity:.5;
        transform:translateY(10px)
    }
    to{
        opacity:1;
        transform:translateY(0)
    }
}
@keyframes plyr-fade-in{
    from{
        opacity:0
    }
    to{
        opacity:1
    }
}
.plyr{
    -moz-osx-font-smoothing:grayscale;
    -webkit-font-smoothing:antialiased;
    direction:ltr;
    font-family:Avenir,"Avenir Next","Helvetica Neue","Segoe UI",Helvetica,Arial,sans-serif;
    font-variant-numeric:tabular-nums;
    font-weight:500;
    line-height:1.7;
    max-width:100%;
    min-width:200px;
    position:relative;
    text-shadow:none;
    transition:box-shadow .3s ease
}
.plyr audio,.plyr video{
    border-radius:inherit;
    height:auto;
    vertical-align:middle;
    width:100%
}
.plyr button{
    font:inherit;
    line-height:inherit
}
.plyr:focus{
    outline:0
}
.plyr--full-ui{
    box-sizing:border-box
}
.plyr--full-ui *,.plyr--full-ui ::after,.plyr--full-ui ::before{
    box-sizing:inherit
}
/* ... */

